project( swappy )

if( OGREDEPS_INSTALL_DEV )
	install( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include )
	install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libswappy_static.a DESTINATION ${OGREDEPS_LIB_DIRECTORY}/${OGREDEPS_DEBUG_PATH})
	install( FILES ${CMAKE_CURRENT_SOURCE_DIR}/lib/arm64-v8a/libswappy_static.a DESTINATION ${OGREDEPS_LIB_DIRECTORY}/${OGREDEPS_RELEASE_PATH})
endif()
